[package]
name = "foundry-fork-db"
description = "Fork database used by Seismic Foundry"
version = "0.13.0"
edition = "2021"
# Remember to update clippy.toml as well
rust-version = "1.83"
authors = ["Foundry Contributors", "Seismic Systems"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/SeismicSystems/seismic-foundry-fork-db"
repository = "https://github.com/SeismicSystems/seismic-foundry-fork-db"

[lints]
rust.unused_must_use = "deny"
rust.rust_2018_idioms = { level = "deny", priority = -1 }
rustdoc.all = "warn"

[lints.clippy]
missing_const_for_fn = "allow" # TODO: https://github.com/rust-lang/rust-clippy/issues/14020
use_self = "warn"
option_if_let_else = "warn"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
alloy-primitives = { version = "0.8.22", features = ["map"] }
alloy-provider = { version = "0.15", default-features = false }
alloy-rpc-types = { version = "0.15", features = ["eth"] }
alloy-consensus = { version = "0.15", default-features = false }

eyre = "0.6"
futures = "0.3"

parking_lot = "0.12"

revm = { version = "20.0.0", default-features = false, features = ["std", "serde"] }

serde = "1.0"
serde_json = "1.0"

thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread"] }
tracing = "0.1"

url = "2"

[dev-dependencies]
alloy-rpc-client = "0.15"
tiny_http = "0.12"

[patch.crates-io]
revm = { git = "https://github.com/SeismicSystems/seismic-revm.git", rev = "906fa098" }
alloy-primitives = { git = "https://github.com/SeismicSystems/seismic-alloy-core.git", rev = "feb9801" }